@@ -1,3 +1,9 @@
+2006-10-11  Alexis Sukrieh  <sukria@backup-manager.org>
+
+	* lib/backup-methods.sh:
+	  + look for previous DAR archives in the last 30 ones possible.
+	  (closes: #127).
+
 2006-10-06  Alexis Sukrieh  <sukria@backup-manager.org>
 
 	* Makefile:
